--- a/screens/ExplorePage/explore.css
+++ b/screens/ExplorePage/explore.css
@@ -15,10 +15,6 @@
     }
 }
 
-.featured-playlists-section {
-    /* border: 1px solid red; */
-}
-
 .featured-playlist {
     width: 100%;
     display: flex;
@@ -32,8 +28,8 @@
 }
 
 .top-tracks-section {
-    /* border: 1px solid red; */
-    height: 40%;
+    height: calc(100% - 300px);
+    margin-top: .5rem;
 }
 
 .tracks {
