--- a/screens/PlaylistInfoPage/PlaylistInfoPage.css
+++ b/screens/PlaylistInfoPage/PlaylistInfoPage.css
@@ -4,6 +4,7 @@
 }
 
 .info-container {
+    position: relative;
     height: 40%;
     width: 100%;
     display: flex;
@@ -14,10 +15,10 @@
     border-top-left-radius: var(--border-radius);
     flex-basis: content;
     background-position: center;
-    background-color: rgb(0, 0, 0,  0.75);
+    background-color: rgb(0, 0, 0,  0.4);
     background-blend-mode:  overlay;
-    backdrop-filter:  saturate(200%) blur(5px) ;
-    background: rgb(238, 49, 36, .3);
+    backdrop-filter:  saturate(200%) blur(10px);
+    /* background: rgb(238, 49, 36, .3); */
 
     & img {
         height: 100%;
@@ -56,41 +57,15 @@
     align-items: center;
     gap: 1rem;
     padding:  1rem;
-    background: rgb(238, 49, 36, .2);
+    /* background: rgb(238, 49, 36, .2); */
+    background: rgb(128, 128, 128, .2);
     border-bottom-right-radius: var(--border-radius);
     border-bottom-left-radius: var(--border-radius);
-    box-shadow: inset 0 -5px 10px rgba(0, 0, 0, 0.7), inset 0 -10px 20px rgba(0, 0,  0, 0.3);
-}
-
-.playlist-controls button {
-    display: grid;
-    place-content: center;
-    color: white;
-    font-size: 1.7rem;
-    padding: 1rem;
-    background: linear-gradient(to right, #ff6f61, #ee3124);
-    border: none;
-    outline: none;
-    border-radius: 50%;
-    cursor: pointer;
-    box-shadow: 0 8px 32px rgba(159, 140, 131, .3);
-    transition: all .3s ease;
-
-    &:hover,
-    &:focus {
-        transform: scale(1.1);
-        box-shadow: 0 16px 30px rgba(159, 140, 131, .6),
-            0 -8px 16px rgba(159, 140, 131, .2);
-    }
-}
-
-.playlist-shuffle-btn {
-    font-size: 1.3rem !important;
-    background: transparent !important;
+    /* box-shadow: inset 0 -5px 10px rgba(0, 0, 0, 0.7), inset 0 -10px 20px rgba(0, 0,  0, 0.3); */
 }
 
 .tracks-section {
-    height: 42%;
+    height: 44%;
     overflow-y: scroll;
 
     & .track-list {
