--- a/components/ArtistsCard/ArtistsCard.css
+++ b/components/ArtistsCard/ArtistsCard.css
@@ -15,8 +15,9 @@
         width: 100%;
         padding: .5rem;
         border-radius: var(--border-radius);
+        /* border: 1px solid rgb(128, 128, 128, .1); */
         background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 100%);
-        backdrop-filter: saturate(48%) blur(10px);
+        /* backdrop-filter: saturate(48%) blur(10px); */
 
         & .artist-name {
             font-size: 1rem;
@@ -36,5 +37,12 @@
     &:hover {
         filter: drop-shadow(0 8px 32px rgba(159, 140, 131, .3));
         transform: scale(1.05) translateY(-5px);
+    }
+}
+
+@media (max-width: 680px) {
+    .artist-card {
+        width: 180px;
+        height: 200px;
     }
 }
