--- a/components/PlaylistCard/PlaylistCard.css
+++ b/components/PlaylistCard/PlaylistCard.css
@@ -21,7 +21,7 @@
 
     &:hover, &:focus {
         filter: drop-shadow(0 8px 32px rgba(159, 140, 131, .3));
-        background-size: 110%;
+        background-size: 120%;
     }
 
     &:hover .play-btn, &:focus .play-btn{
@@ -36,7 +36,7 @@
     align-items: center;
     justify-content: space-between;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 100%);
-    backdrop-filter:  blur(10px) saturate(.7);
+    /* backdrop-filter:  blur(0px) saturate(.7); */
     z-index: 1;
     padding: 1rem;
     padding-block: 1rem;
@@ -65,4 +65,26 @@
 
 .hidden {
     display: none  !important;
+}
+
+/* @media (max-width: 960px) {
+    .playlist-card {
+        width: 180px;
+        height: 200px;
+    }
+} */
+
+@media (max-width: 640px) {
+    .playlist-card {
+        width: 180px;
+        height: 200px;
+    }
+    
+    .play-btn {
+        display: none !important;
+    }
+
+    .playlist-info div {
+        width: 100%;
+    }
 }
