--- a/components/TrackList/Track.css
+++ b/components/TrackList/Track.css
@@ -21,6 +21,7 @@
     display: inline-flex;
     align-items: center;
     justify-content: space-between;
+    gap: .5rem;
 }
 
 .track-item .track-img {
