--- a/screens/ArtistsInfoPage/ArtistsInfoPage.css
+++ b/screens/ArtistsInfoPage/ArtistsInfoPage.css
@@ -1,7 +1,4 @@
 .artist-info-page {
-    width: calc(100% - 400px);
-    padding: 1rem;
-    height: 100% !important;
     overflow-y: auto;
 
     &::-webkit-scrollbar {
@@ -51,10 +48,15 @@
     /* box-shadow: inset 0 -5px 10px rgba(0, 0, 0, 0.7), inset 0 -10px 20px rgba(0, 0, 0, 0.3); */
 }
 
+.artist-songs {
+    padding-top: .5rem;
+}
+
 .artist-songs-list {
     display: flex;
     flex-direction: column;
     gap: .2rem;
+    padding-top: .5rem;
     width: 100%;
     max-height: calc(38vh);
     overflow-y: hidden;
@@ -71,6 +73,7 @@
     text-align: center;
     align-self: end;
     padding: .7rem 1.5rem;
+    margin-top: .5rem;
     border-radius: var(--border-radius);
     border: 1px solid white;
     outline: none;
@@ -82,6 +85,10 @@
         filter: brightness(.9) contrast(1.1);
         transform: scale(1.1) translateY(-.2rem);
     }
+}
+
+.artist-albums {
+    padding-top: .5rem;
 }
 
 .artist-albums-list {
@@ -99,5 +106,15 @@
 
     &::-webkit-scrollbar-thumb {
         background: #ddd;
+    }
+}
+
+@media (max-width: 640px) {
+    .artist-info-page .artist-info h1 {
+        font-size: 3rem;
+    }
+
+    .artist-albums-list {
+        padding: .5rem 0rem;
     }
 }
