--- a/screens/PlaylistInfoPage/PlaylistInfoPage.css
+++ b/screens/PlaylistInfoPage/PlaylistInfoPage.css
@@ -1,8 +1,3 @@
-.playlist-page {
-    width: calc(100% - 400px);
-    padding: 1rem;
-}
-
 .info-container {
     position: relative;
     height: 40%;
@@ -79,8 +74,26 @@
     }
 }
 
-@media (max-width: 960px) {
+/* @media (max-width: 960px) {
     .playlist-page {
         width: calc(100% - 300px);
+    }
+} */
+
+@media (max-width: 680px) {
+    .info-container {
+        height: 30%;
+    }
+    .info-container img{
+       height: 70%;
+    }
+
+    .info-container h1 {
+        font-size: 2rem;
+        line-height: 2rem;
+    }
+
+    .tracks-section {
+        height: 54%;
     }
 }
