--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,52 @@
   margin-top: 5.5rem;
 }
 
+h2 {
+  font-size: 1.2rem;
+}
+
+aside {
+  width: 400px;
+  padding: 1rem;
+  order: 3;
+  border: 1px solid red;
+}
+
+main {
+  width: calc(100% - 400px);
+  padding: 1rem;
+  height: 100%;
+  overflow-y: hidden;
+  order: 2;
+}
+
+@media (max-width: 960px) {
+  aside {
+    display: none !important;
+  }
+  main {
+    width: 100%;
+  }
+}
+
+@media (max-width: 640px) {
+  .full-page {
+    flex-direction: column;
+  }
+  
+  aside {
+    display: none !important;
+  }
+
+  main {
+    padding-block: 0rem;
+    width: 100%;
+    order: 1;
+  }
+}
+
+
+
 .current-page {
   background: linear-gradient(to right, #ff6f61, #ee3124);
   box-shadow: 0 8px 32px rgba(159, 140, 131, .3);
